! fix wrong position popup

--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "PT Sans", serif;
 }
 
 html, body {
@@ -86,12 +87,14 @@ html, body {
 }
 
 .section {
+  padding-top: 50px;
   display: -webkit-box;
   display: flex;
   .thumb {
     width: 140px;
     height: 140px;
     border-radius: 100%;
+    margin-right: 20px;
     img {
       width: 140px;
       height: auto;
@@ -106,7 +109,7 @@ html, body {
   height: 100%;
   background-color: rgba(80, 80, 80, 0.8);
   z-index: 1000;
-  position: absolute;
+  position: fixed;
   top: 0;
   text-align: center;
   &:before {
@@ -129,6 +132,12 @@ html, body {
       .content {
         text-align: left;
         width: 770px;
+        display: -webkit-box;
+        -webkit-justify-content: center;
+        img{
+          max-width: 770px;
+          max-height: 432px;
+        }
       }
       .desc {
         width: 254px;
